# safecopy

./: README  autogen.sh  configure.ac  configure.in  publish.sh
benchmark/cdrom-lighton/: simulator.cfg
benchmark/floppy/: README  simulator.cfg
benchmark/scripts/: README  auswertung.sh  mean-calculation.sh
safecopy/: ChangeLog  NEWS  README  configure.in  publish.sh
safecopy/benchmark/: benchmark.sh
safecopy/benchmark/cdrom-dell/: README  simulator.cfg
safecopy/benchmark/cdrom-lighton/: README
safecopy/benchmark/scripts/: characteristics.sh
safecopy/simulator/doc/: analysis.lyx
safecopy/simulator/src/: Makefile.am  simulatorlb.c
safecopy/src/: Makefile.am  arglist.c  arglist.h  lowlevel.c  lowlevel.h  safecopy.1  safecopy.c  textlist.c  textlist.h  voidlist.c  voidlist.h
safecopy/test/: README  config_in.sh  test.sh
safecopy/test/libsafecopydebug/: autogen.sh  configure.in
safecopy/test/test0/: test.sh
safecopy/test/test1/: test.sh
safecopy/test/test10/: test.sh
safecopy/test/test100/: simulatorw.cfg
safecopy/test/test101/: simulator.cfg  simulatorw.cfg  test.sh
safecopy/test/test11/: test.sh
safecopy/test/test12/: test.sh
safecopy/test/test2/: test.sh
safecopy/test/test3/: test.sh
safecopy/test/test4/: test.sh
safecopy/test/test5/: test.sh
safecopy/test/test6/: test.sh
safecopy/test/test7/: test.sh
safecopy/webpage/: index.html
simulator/src/: simulatorlb.c  simulatorwlb.c
src/: arglist.c  safecopy.1  safecopy.c
test/test100/: test.sh
webpage/: index.html
webpage/analysis/: index.html
(+15 files in other folders)
