#Process this file with autoconf to produce a configure script.

AC_INIT([safecopy], [1.8])
AC_CONFIG_SRCDIR(configure.ac)
AM_INIT_AUTOMAKE

AC_PREREQ(2.5)
#AC_ISC_POSIX
CFLAGS="$CFLAGS -Wall"
#add a space to make these macros not add stupid stuff if it was unset
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC


AC_OUTPUT([
Makefile
src/Makefile
])

AC_MSG_RESULT([[
-----------------------------------------------------------------------
             compile configuration completed successfully

]])

