## Process this file with automake to produce Makefile.in

bin_PROGRAMS = \
	libsimulatorlb.so.1.0 \
	libsimulatorwlb.so.1.0

libsimulatorlb_so_1_0_SOURCES = \
	simulatorlb.c

libsimulatorlb_so_1_0_LDFLAGS = -shared -nostdlib

libsimulatorwlb_so_1_0_SOURCES = \
	simulatorwlb.c

libsimulatorwlb_so_1_0_LDFLAGS = -shared -nostdlib

